Fix code wrapping

--- a/src/scss/components/_prism.scss
+++ b/src/scss/components/_prism.scss
@@ -9,8 +9,8 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
 .code-code {
   text-align: left;
   word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
+  // word-break: normal;
+  // word-wrap: normal;
   direction: ltr;
   tab-size: 4;
   hyphens: none;
